[package]
name = "zk-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
egui_graphs = "=0.30.0"
petgraph = "0.8.3"
foldhash = "0.2.0"
serde_json = "1.0.149"
serde = "1.0.228"
notify-debouncer-mini = "0.7.0"
log = "0.4.29"
notify = "8.2.0"
env_logger = "0.11.10"
egui_commonmark = "0.23.0"
